# ChangeLog for sys-boot/plymouth
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Feb 2011; Amadeusz Żołnowski <aidecoe@gentoo.org>
  -files/0.8.3-drm-reduce-minimum-build-requirements.patch,
  -files/0.8.3-gentoo-fb-path.patch, -plymouth-0.8.3-r5.ebuild,
  -files/0.8.3-image-replace-deprecated-libpng-function.patch:
  Removed 0.8.3 ebuild as it's already committed into Portage tree.

  04 Feb 2011; Amadeusz Żołnowski <aidecoe@aidecoe.name>
  plymouth-0.8.3-r5.ebuild, plymouth-9999.ebuild:
  Lacked 'die' for ins commands.

  04 Feb 2011; Amadeusz Żołnowski <aidecoe@aidecoe.name>
  plymouth-0.8.3-r5.ebuild, plymouth-9999.ebuild:
  Added link in postinst message to instructions on how to setup Plymouth.

  04 Feb 2011; Amadeusz Żołnowski <aidecoe@aidecoe.name>
  -plymouth-0.8.3-r3.ebuild:
  Removed obsolete revision.

*plymouth-0.8.3-r5 (04 Feb 2011)

  04 Feb 2011; Amadeusz Żołnowski <aidecoe@aidecoe.name>
  -plymouth-0.8.3-r4.ebuild, +plymouth-0.8.3-r5.ebuild:
  Revision bump related to missing dracut dependency.

  04 Feb 2011; Amadeusz Żołnowski <aidecoe@aidecoe.name>
  plymouth-0.8.3-r4.ebuild, plymouth-9999.ebuild:
  plymouth initramfs generation scripts requires dracut-functions, therefore
  >=sys-kernel/dracut-007 dependency is needed.

*plymouth-9999 (04 Feb 2011)

  04 Feb 2011; Amadeusz Żołnowski <aidecoe@aidecoe.name>
  +files/9999-gentoo-fb-path.patch, plymouth-0.8.3-r4.ebuild,
  +plymouth-9999.ebuild, metadata.xml:
  9999: Live ebuild imported from bug #274065 (attachment #261479 by Lucian
  Muresan) and stripped from conditions to be git-only and simpler.

  0.8.3-r4: Using PATCHES array instead of manually specifying epatch commands.

  metdata.xml: Better flags' descriptions and package's long description.

*plymouth-0.8.3-r4 (03 Feb 2011)

  03 Feb 2011; Amadeusz Żołnowski <aidecoe@aidecoe.name>
  +files/0.8.3-drm-reduce-minimum-build-requirements.patch,
  +files/0.8.3-gentoo-fb-path.patch,