@@ -1,6 +1,6 @@
 AUX 9999-gentoo-fb-path.patch 804 RMD160 4e46da3ee7b36b2f6618089c42ab06a54fc5c450 SHA1 6a1f211fe2437205da767bffcdb50c83e1725a2a SHA256 5496471c4ace51561054aadce35b7772ac65b54ace04329386d2b2dfc1ef8c8f
-AUX gentoo_ply.png 11884 RMD160 b6854064f2a6c94df51bcc8f0de03f2de3dde52d SHA1 93499a1bc9f655d9da6dde482125ab2595c1c0ae SHA256 9d22eaca844c18510d250db34fb689323f697b621387bbd1b5e4042c3e6e6f14
 AUX plymouth.initd 402 RMD160 12174a38b36e741c962a7e33e037bbd04f2e7d75 SHA1 d9221a1b76bcba43dd51df565715b7c9c602a91d SHA256 81fdc6838c72b0ed3874e08aefd6e77a4f735ce406452120ee1d52b3196c1db8
-EBUILD plymouth-9999.ebuild 1886 RMD160 4fb1def16c048aad5beaeb64cc237e79d282c9c6 SHA1 88fe3aecdb744db709b8c72d2fc963d4a045ae9e SHA256 f9ff47fb59de95255ec714bd0b422f5006bc32d5c03934ed1b792ccad6f23a46
-MISC ChangeLog 3759 RMD160 22b64666c595ffcc903dc92ab78de04a5e565337 SHA1 23e97915b863aec2b16ea50da30a9426021846a1 SHA256 808f7d4d19eae037a0839718fe496f4c9079189036488591fea95ce8bc3f0c84
+DIST gentoo-logo.png 14501 RMD160 e4f33be3f763537242bcd47ea9e145e919152213 SHA1 42e22719c2aa24869c7c22ed06d398272404fd24 SHA256 79ebc1d66693371a90e218ad421cfed05066b51a6645bd967bb7da356a0881fa
+EBUILD plymouth-9999.ebuild 2162 RMD160 266052b93268a270f5037c2d20c370251475a108 SHA1 fd32238f25b6029d67027fe695ec0706d15144bb SHA256 dab1084a832575662fcb7bfa6b04bc6907e8ebfd4258235050edc08415f274cf
+MISC ChangeLog 4030 RMD160 c3f6f5b4a157d20eab4cfae9234080c3ac8ef949 SHA1 9fbd6415f02457d09fcc644cf6dcc725a790338b SHA256 f40e8d3523858de771613abd517c1d5494c003d4198185d01a4dd817e4705372
 MISC metadata.xml 1051 RMD160 97214658a47faf8fc63e38b4d423979345dd281e SHA1 84c1722a770c01066f78e45b07d46af9f36cb65e SHA256 3d7d850b76cdb158d1a5ed6385a8c0771687d10ba50401e4dce4906a3b96ed16
