@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Feb 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> plymouth-9999.ebuild,
+  -files/gentoo_ply.png:
+  I have moved gentoo-logo.png from 'files' to my web space on dev.gentoo.org
+  and updated postinst message with warning about interactive feature of init
+  system.
+
   21 Feb 2011; Amadeusz Żołnowski <aidecoe@gentoo.org>
   -files/0.8.3-drm-reduce-minimum-build-requirements.patch,
   -files/0.8.3-gentoo-fb-path.patch, -plymouth-0.8.3-r5.ebuild,
